--- a/WpfCanvas/WpfCanvas.csproj
+++ b/WpfCanvas/WpfCanvas.csproj
@@ -33,20 +33,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-      <Reference Include="System" />
-      <Reference Include="System.Data" />
-      <Reference Include="System.Xml" />
-      <Reference Include="Microsoft.CSharp" />
-      <Reference Include="System.Core" />
-      <Reference Include="System.Xml.Linq" />
-      <Reference Include="System.Data.DataSetExtensions" />
-      <Reference Include="System.Net.Http" />
-      <Reference Include="System.Xaml">
-          <RequiredTargetFramework>4.0</RequiredTargetFramework>
-      </Reference>
-      <Reference Include="WindowsBase" />
-      <Reference Include="PresentationCore" />
-      <Reference Include="PresentationFramework" />
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xaml">
+      <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="WindowsBase" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -68,6 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WhereIsTheCableCar.csproj">
+      <Project>{4252B872-DA9A-426D-AE5D-1EF6C2F40382}</Project>
+      <Name>WhereIsTheCableCar</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
